--- a/phone.css
+++ b/phone.css
@@ -1,72 +1,79 @@
 /*navigation*/
-#navbar{
-	flex-direction: column;
+
+#navbar {
+    flex-direction: column;
 }
-#navbar ul li a{
-	font-size: 1rem;
-	padding: 0px 7px;
+
+#navbar ul li a {
+    font-size: 1rem;
+    padding: 0px 7px;
 }
+
 
 /*home section*/
 
-#home{
-	height: 370px;
-	padding: 3px 28px;
+#home {
+    height: 370px;
+    padding: 3px 28px;
+}
+
+#home::before {
+    height: 480px;
+}
+
+#home p {
+    font-size: 13px;
+}
 
 
-}
-#home::before{
-	height: 480px;
-}
-#home p{
-	font-size: 13px;
-}
 /*service section*/
 
-
-#services{
-	font-size: 13px;
-	flex-direction: column;
-
+#services {
+    font-size: 13px;
+    flex-direction: column;
 }
+
 #services .box {
-	padding: 14px;
-	margin:2px 0px;
-	margin-bottom: 20px;
+    padding: 14px;
+    margin: 2px 0px;
+    margin-bottom: 20px;
+}
 
-}
-#services .box img{
-}
+#services .box img {}
 
 
 /*client section*/
 
+#clients {
+    flex-wrap: wrap;
+}
 
-#clients{
-	flex-wrap: wrap;
+#clients img {
+    width: 66px;
+    padding: 2px 6px;
+    cursor: pointer;
+    filter: grayscale(100%);
 }
-#clients img{
-	width: 66px;
-	padding: 2px 6px;
+
+#clients img:hover {
+    filter: grayscale(0);
 }
+
 
 /*utility*/
 
-.h-primary{
-	font-size: 26px;
-
+.h-primary {
+    font-size: 26px;
 }
 
-
-.btn{
-	font-size: 13px;
-	padding: 4px 8px;
+.btn {
+    font-size: 13px;
+    padding: 4px 8px;
 }
-
-
 
 
 /*contact section*/
-#contact-box form{
-	width: 80%;
+
+#contact-box form {
+    width: 80%;
 }
